FIX: Typo en HTML, renombrado del archivo clase global Cors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             });
 
             const data = await response.json();
-            result.textContent = `Su pago mensual será de : $${data.pagoMesual.toFixed(2)}`;
+            result.textContent = `Su pago mensual será de : $${data.pagoMensual.toFixed(2)}`;
         });
     </script>
 </body>
